[package]
name = "bigi-rsa"
version = "0.1.0"
authors = ["Alexander <mail@fomalhaut.su>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bigi = { git = "https://github.com/fomalhaut88/bigi.git", tag = "v0.4.0" }
